# Mountain-DisplayPad-plugin-for-OpenDeck

./: .gitattributes  .gitignore  40-opendeck-displaypad.rules  Cargo.toml  LICENSE  README.md  manifest.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
adapter/: Cargo.toml
adapter/src/: lib.rs  main.rs
driver/: Cargo.toml
driver/src/: lib.rs
scripts/: build-all.sh
