[package]
name = "adapter"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
driver = { path = "../driver" }
hidapi = { version = "1.3", default-features = false }
openaction = "2.6.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
simplelog = "0.12"
async-trait = "0.1"
log = "0.4"
data-url = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp", "gif"] }
async-hid = { version = "0.5", default-features = false, features = ["tokio", "win32"] }
futures-lite = "2"

[target."cfg(target_os = \"linux\")".dependencies]
driver = { path = "../driver", features = ["linux-hidraw"] }
